Fixed footer with z-index

--- a/simplq/src/styles/joinPage.module.scss
+++ b/simplq/src/styles/joinPage.module.scss
@@ -35,6 +35,7 @@
     right: 0;
     text-align: center;
     align-items: center;
+    z-index: 1;
     .header-title {
       align-items: center;
     }
